# rams-diagnostics

./: Makefile  Makefile.am  PDF_pools_allexps.f90  README  README.md  azavg.f90  azavg_utils.f90  cfad.f90  colint.f90  configure  configure.ac  gDataTypes.h  gdata.f90  plotCfad.gs  plotHslice.gs  plotInitFields.gs  plotVslices.gs  run_configure  run_distcheck  sfcwind.f90  vslice.f90
atex/: DiagConfig  ExtractSample.m  GenCloudStructPlots.m  GenDistPlots.m  GenProfPlots.m  GenSwPlots.m  GenSwupBarCharts.m  GenTavgRrateFracAreaDist.m  GenTimeAvgRratePdf.m  GenTopSwup.m  Makefile  PlotRrateHist.m  PlotSampleData.m
atex.mdir/: DiagConfig  GenBuoyancyFlux.m  GenCfrac2dHists.m  GenProfPlots.m  GenSlope1dPlots.m  GenSlopePlots.m  MakeSinglePanelFigs.m  Makefile  PlotProfs.m  PlotSampleW250.m  SetPath.m
common/: AdiffEofPlot.m  AzavgDiffEof.m  GenAdiffEofPlots.m  GenAzavgDiffEof.m  GenCfad.m  GenCfads.m  GenHistMeas.m  GenKeVtPlots.m  GenLinePlots.m  GenProfMeas.m  GenTimeAvg.m  GenTsPlots.m  GenVintTseries.m  Hdf5ToVaporNcdf.m  Line2Fields.m  Makefile  Plot2dSet.m  PlotProfSet.m  PlotTseriesSet.m  ReadConfig.m  ReduceHists.m  RunAzavgDiffEof.m  SelectDataXyzt.m  SmoothFillTseries.m  TileFigs.m  TimeToString.m  Xyzt2EofArray.m  figmerge.m
common.mdir/: AdiffEofPlot.m  Gen2dHistData.m  GenAdiffEofPlots.m  GenCountBins.m  GenLinePlots.m  GenPcolorPlots.m  GenProfMeas.m  GenSlopeBins.m  GenSlopes.m  GenSoundingStruct.m  GenTsPlots.m  Makefile  Plot2dSet.m  PlotProfSet.m  PrepVaporData.m  ReadConfig.m  ReduceHists.m  SoundingToProfile.m  WriteCoordData.m  print2array.m
fortran/: Makefile
lib/: Makefile  Makefile.am  rhdf5_snames.h
m_map/: Makefile
m_map.mdir/: Makefile
matlab/: Makefile
metpack.mdir/: Makefile  getcape.m  skew_sounding.m
obj_anal/: CompositeEiTemp.m  CreateCyclicIndices.m  CreateCyclicPattern.m  EofNan.m  (+12 more)
obj_anal.mdir/: GenCrossSpectrum.m  Makefile  Plot2dEofPc.m  Plot2dMap.m  ReadGlobalTempFile.m  RegFit.m  RunFft.m  RunningMean.m
scripts/matlab/atex/: GenBLcouplingData.m  GenBlStats.m  GenCfCdBarPlots.m  GenEnsembleData.m  GenHistData.m  GenHistFiles.m  GenLegendPlots.m  GenProfileData.m  Makefile.am  PlotMultiPanelSample.m  ReportAvgCtypeCfrac.m  SpareLinePlotSpecs.txt
scripts/matlab/atex2/: FigMicrophysicsS298_Config  Makefile.am
scripts/matlab/common/: CombineBins.m  LeftJustTitle.m  LonToKm.m  Makefile  Makefile.am  NotateDimensionsXyzt.m  NotateVariableXyzt.m  PlotBarSet.m  ReadDpFile.m  ReadSelectHdf5.m  screen2jpeg.m  smooth121.m
scripts/matlab/pivmat/: Makefile  Makefile.am
scripts/matlab/tc_seed/: Makefile.am  PlotAerosolProfiles.m  PlotGrids.m  PlotInitialVortex.m  PlotRsProfs.m  PrepVaporData.m  SetPath.m
scripts/matlab/tc_seed/EXP/: GenAerosolMovie3d.m
scripts/python/ts_debby/: GenFieldNoVortex.py  GenWindShearField.py  Makefile  Makefile.am  PlotFsFigTimeSeries.py
src/libraries/diag_utils/: Makefile.am  diag_utils.f90
src/libraries/getoptions/: Makefile.am
src/libraries/rhdf5/: Makefile.am  rhdf5_utils.f90
src/programs/create_bins/: Makefile.am  create_bins.f90
src/programs/diag_filter/: Makefile.am
src/programs/find_tc_center/: Makefile.am  find_tc_center.f90
src/programs/gen_tc_tilt/: Makefile.am
src/programs/gen_vt_vr/: Makefile.am  gen_vt_vr.f90
src/programs/gen_xsection/: Makefile.am  gen_xsection.f90
src/programs/sig_proc/: Makefile.am
src/programs/sub_vortex/: Makefile.am
src/scripts/matlab/m_map/: Makefile.am  m_map1.4.1.tar
src/scripts/matlab/nasa_wisc/: EqMeasHdf5.m  FigLatHeatProfileConfig  FigureConfig  Makefile.am  TogaCoareToRamsSound.m  plots_RCE.m
src/scripts/matlab/nctoolbox/: Makefile.am
src/scripts/matlab/obj_anal/: CovNan.m  DotProdNan.m  GenPowerSpectrum.m  HannWindow.m  Makefile.am  MeanNan.m  NormCols.m  Plot2dMap.m  PlotEigSpectrum.m  PrintSigPeaks.m  SetAreaToOne.m  SweepLagCor.m  redblue.m
src/scripts/matlab/pivmat/: Makefile.am  license.txt
src/scripts/matlab/ts_debby/: ExtractHorizWinds.m  FigAggrSubXsectionConfig  FigBuoyXsectionConfig  FigCoolProfileConfig  FigCpoolDistConfig  FigDnDraftRbandProfileConfig  FigDnXsectionConfig  FigDust1CoreProfileConfig  FigDust1NumSampProfileConfig  FigDust1NumXsectionConfig  FigDust2CoreProfileConfig  FigDust2EnvProfileConfig  FigDust2NumXsectionConfig  FigFsConfig  FigGraupSubXsectionConfig  FigHailDepXsectionConfig  FigHeatProfileConfig  FigHovmollerConfig  FigHydroXsectionConfig  FigLiqCondProfileConfig  FigRainEnvProfileConfig  FigRainRbandProfileConfig  FigSnowDepXsectionConfig  FigStrackDustAggrConfig  FigStrackDustPrisConfig  FigStrackRainConfig  FigStrackThetaeConfig  FigStrackVaporConfig  FigTcondRbandProfileConfig  FigTempcRbandProfileConfig  FigThetaRhoProfileConfig  FigThetaXsectionConfig  FigTseriesConfig  FigUpDraftProfileConfig  FigUpXsectionConfig  FigVaporRbandProfileConfig  FigVintCondConfig  FigWindShearConfig  FixSstFiles.m  GenAccumSfcDust.m  (+36 more)
src/scripts/matlab/ts_debby/OLD/: FigAggrEnvProfileConfig  FigCloudCoreProfileConfig  FigCloudEnvProfileConfig  FigGraupCoreProfileConfig  FigLhfCoolEnvProfileConfig  FigLhfHeatCoreProfileConfig  FigLhvCoolEnvProfileConfig  FigLhvHeatEnvProfileConfig  FigTcondXsectionConfig  FigThetaRhoEnvProfileConfig  FigUpDraftCoreProfileConfig  FigUpDraftRbandProfileConfig  PlotAvgPcprateAll.m  PlotHovDiags.m  PlotIkeAll.m  PlotMaxWind.m  PlotPressWind.m  PlotRmwAll.m  PlotTracks.m
src/scripts/perl/: Makefile.am  RunRevuJob  run_gen_flux  run_gen_vint_terms  run_gen_vt_vr  run_gen_xsection
src/scripts/python/nasa_wisc/: ConfigRce.py  ExtractRceLiteVars.py  GenAnimFrames.py  GenDomAverages.py  GenEqMeas.py  GenPowerSpectra.py  GenProfiles.py  GenRainDropEnergy.py  GenRamsDomAvgs.py  GenTcondXsections.py  Makefile.am  PlotPowerSpectra.py  PlotProfiles.py  PlotSkewT.py
src/scripts/python/ts_debby/: ConfigTsd.py  FsFigContour.py  FsFigLine.py  GenFieldNoVortex.py  GenReduceData.py  GenStormHovmollers.py  GenVentIndex.py  Makefile.am  PlotFsFigPtrackTempGrad.py  PlotFsFigRadial.py  PlotFsFigStormHovmollers.py  PlotFsFigTrackXsections.py  PlotFsFigWind.py  PlotFsFigWindTseries.py
(+987 files in other folders)
