matatexdir = $(prefix)/etc/matlab/atex
matatex_SCRIPTS = \
    CombineStCloudTypes.m \
    ExtractSample.m \
    GenAlbedo.m \
    GenAvgCloudDepth.m \
    GenAvgFilesCtype.m \
    GenAvgLCL.m \
    GenAvgLwpToCdepthFilesCtype.m \
    GenBLcouplingData.m \
    GenBarGraphData.m \
    GenBarGraphFilesCtype.m \
    GenBarGraphsCtype.m \
    GenBlStats.m \
    GenBuoyancyFlux.m \
    GenCfCdBarPlots.m \
    GenCfrac2dHists.m \
    GenCloudFracPlots.m \
    GenCloudStructPlots.m \
    GenDistPlots.m \
    GenDomAvgCtypeTseries.m \
    GenDropSizeDists.m \
    GenEnsembleData.m \
    GenFigures.m \
    GenHdaTseriesFiles.m \
    GenHfracCloud.m \
    GenHistData.m \
    GenHistFiles.m \
    GenHistFilesCtype.m \
    GenLegendPlots.m \
    GenMomentData.m \
    GenPdfFiles.m \
    GenPdfFilesCtype.m \
    GenPdfPlots.m \
    GenProfPlots.m \
    GenProfileData.m \
    GenRain2CloudRatio.m \
    GenSfcDiv.m \
    GenSlope1dPlots.m \
    GenSlopePlots.m \
    GenSwupBarCharts.m \
    GenTavgRrateFracAreaDist.m \
    GenTkeTavg.m \
    GenTopSwup.m \
    GenTurbData.m \
    GenWcfads.m \
    GenWcfadsJoin.m \
    GenWmoments.m \
    GenWturbPlots.m \
    GenWvarTavg.m \
    MakeSinglePanelFigs.m \
    PlotDistSet.m \
    PlotInitialAerosols.m \
    PlotInitialConditions.m \
    PlotMultiPanelSample.m \
    PlotProfs.m \
    PlotSampleData.m \
    PlotSampleW250.m \
    PrepVaporData.m \
    ReportAvgCtypeCfrac.m \
    ReportEnsLtss.m \
    SetPath.m
