matatex2dir = $(prefix)/etc/matlab/atex2
matatex2_SCRIPTS = \
    FigBarGraphs_Config \
    FigBlStats_Config \
    FigMicrophysicsS293_Config \
    FigMicrophysicsS298_Config \
    FigProfilesS293_Config \
    FigProfilesS298_Config \
    FigTestInitCcn_Config \
    FigTestTimeSeries_Config \
    GenAvgFiles.m \
    GenBarGraphFiles.m \
    GenBuoyancyFlux.m \
    GenMomentFiles.m \
    GenPdfFiles.m \
    SetPath.m
