matcommondir = $(prefix)/etc/matlab/common
matcommon_SCRIPTS = \
    AdiffEofPlot.m \
    AssociateStructs.m \
    AttachDimensionsXyzt.m \
    AzavgDiffEof.m \
    CombineBins.m \
    CompileCounts.m \
    CountsToAvg.m \
    CreateDimension.m \
    CreateDimensionsXyzt.m \
    DrawPlotData.m \
    Gen2dHistData.m \
    GenAdiffEofPlots.m \
    GenAxesSpecs.m \
    GenContourPlots.m \
    GenCountBins.m \
    GenCountBins1d.m \
    GenDataSpecs.m \
    GenDeltapTseries.m \
    GenFigures.m \
    GenHistMeas.m \
    GenLinePlot.m \
    GenLinePlots.m \
    GenMoments.m \
    GenPcolorPlots.m \
    GenProfMeas.m \
    GenSlopes.m \
    GenSlopes1d.m \
    GenSoundingStruct.m \
    GenTimeAvg.m \
    GenTsPlots.m \
    GenVintTseries.m \
    Hdf5ToBin.m \
    Hdf5ToNcdf.m \
    LatToKm.m \
    LeftJustTitle.m \
    Line2Fields.m \
    LonToKm.m \
    MakeBlankPlot.m \
    NotateDimension.m \
    NotateDimensionsXyzt.m \
    NotateVariableXyzt.m \
    ParseTitle.m \
    Plot2dSet.m \
    PlotBarSet.m \
    PlotContour.m \
    PlotProfSet.m \
    PlotTseriesSet.m \
    ReadAzavgVar.m \
    ReadConfig.m \
    ReadDpFile.m \
    ReadFigureConfig.m \
    ReadPrepConfigFile.m \
    ReadSelectHdf5.m \
    ReadSelectXyzt.m \
    ReduceData.m \
    ReduceHist1D.m \
    ReduceHists.m \
    RunAzavgDiffEof.m \
    SetPlotAxes.m \
    SmoothFillTseries.m \
    SoundingToProfile.m \
    TileFigs.m \
    TimeToString.m \
    WriteCoordData.m \
    WriteDpFile.m \
    WriteStringAttribute.m \
    Xyzt2EofArray.m \
    cbfreeze.m \
    cbhandle.m \
    columnlegend.m \
    export_fig.m \
    figmerge.m \
    freezeColors.m \
    gridLegend.m \
    inpaintn.m \
    print2array.m \
    radar_cmap.m \
    read_zlevs_hfile.m \
    rsat.m \
    screen2jpeg.m \
    set_figsize.m \
    smooth121.m \
    startup.m \
    str2rgb.m \
    test_freezeColors.m \
    tightfig.m \
    unfreezeColors.m
