mattcseeddir = $(prefix)/etc/matlab/tc_seed
mattcseed_SCRIPTS = \
    AerosolAnimation.m \
    CCN_GifAnim.m \
    CWP_GifAnim.m \
    DiagConfig.SST_26.Init24 \
    DiagConfig.SST_26.Init24_SD \
    DiagConfig.SST_26.Init54 \
    GenHistOpenSpace.m \
    GenKeVtPlots.m \
    GenPrecipData.m \
    GenRadarData.m \
    MakeDataAvgFig.m \
    MakeFigureJpeg.m \
    MakeKevtRmwFig.m \
    MakeStormEvolFig.m \
    MeasureStorms.m \
    PlotAerosol3d.m \
    PlotAerosolLoc.m \
    PlotAerosolProfiles.m \
    PlotCfads.m \
    PlotControlVtSpl.m \
    PlotCwp40.m \
    PlotGrids.m \
    PlotHmeas.m \
    PlotHmeas2d.m \
    PlotHmeas3d.m \
    PlotHmeasSlices.m \
    PlotInitialVortex.m \
    PlotPrecip.m \
    PlotProfs.m \
    PlotRsProfs.m \
    PlotSampleStormPhases.m \
    PlotSampleVt.m \
    PlotSampleVtSPL.m \
    PlotStormPhases.m \
    PlotStormRegions.m \
    PlotThetaE.m \
    PlotTsProfs.m \
    PlotVintCond.m \
    PlotVr.m \
    PlotVt.m \
    PrepVaporData.m \
    SetPath.m
