pytsdebbydir = $(prefix)/etc/python/ts_debby
pytsdebby_SCRIPTS = ConfigTsd.py FsFigContour.py FsFigLine.py GenFieldNoVortex.py GenMoistureBudget.py GenPtrackMomentum.py GenPtrackTempGrads.py GenReduceData.py GenStormHovmollers.py GenTrackAverages.py GenVentIndex.py GenWindShearField.py PlotFsFigPlanViews.py PlotFsFigPtrackTempGrad.py PlotFsFigStormHovmollers.py PlotFsFigStormXsections.py PlotFsFigTimeSeries.py PlotFsFigTrackXsections.py PlotFsFigVentIndex.py PlotFsFigWind.py PlotFsFigWindTseries.py
