dist_bin_SCRIPTS = \
    RunRevuJob \
    run_azavg \
    run_diag_filter \
    run_gen_adv \
    run_gen_flux \
    run_gen_moments \
    run_gen_u_v \
    run_gen_vint_terms \
    run_gen_vt_vr \
    run_gen_xsection \
    run_hdata_op \
    run_revu \
    run_sub_vortex \
    run_tsavg

perllibdir = $(prefix)/etc/perl
dist_perllib_SCRIPTS = \
    DiagUtils.pm
