matnasawiscdir = $(prefix)/etc/matlab/nasa_wisc
dist_matnasawisc_SCRIPTS =  \
    DiagConfig \
    ExtractSampleProfiles.m \
    EqMeasHdf5.m \
    FigLatHeatProfileConfig \
    FigReport062415_Config \
    FigureConfig \
    Gen2dHovmoller.m \
    GenDomAvgTseries.m \
    GenEqMeasTseries.m \
    GenMeanHydroParams.m \
    GenRceHistMeas.m \
    PlotEqMeas.m \
    PlotSampleProfiles.m \
    RAMS_nc_series.m \
    ReadTogaCoareSound.m \
    SetPath.m \
    TogaCoareToRamsSound.m \
    plots_RCE.m \
    powerspectraplot.m
