matobjanaldir = $(prefix)/etc/matlab/obj_anal
dist_matobjanal_SCRIPTS = \
    CompositeEiTemp.m \
    CovNan.m \
    Create2dMap.m \
    CreateCyclicIndices.m \
    CreateCyclicPattern.m \
    DiffOfMeansTstat.m \
    DotProdNan.m \
    EigenSpectrum.m \
    EofNan.m \
    FisherZscore.m \
    GenCoherence.m \
    GenCrossSpectrum.m \
    GenPowerSpectrum.m \
    GenRnoiseSpectrum.m \
    GenSampleStats.m \
    GenSpectrum.m \
    GenSplitCrossSpectrum.m \
    GenSplitSpectrum.m \
    HannWindow.m \
    LagRegCor.m \
    LagRegFit.m \
    LowPassButter.m \
    MatMultNan.m \
    MeanNan.m \
    NormCols.m \
    Plot2dEofPc.m \
    Plot2dMap.m \
    PlotEigSpectrum.m \
    PlotPowerSpectrum.m \
    PlotWorldDataMap.m \
    PrintSigPeaks.m \
    PullOutCyclicData.m \
    ReadEnsoFile.m \
    ReadGlobalTempFile.m \
    RedNoise.m \
    RedNoiseSpectrum.m \
    RegCorCoeffs.m \
    RegFit.m \
    RemoveMeanNan.m \
    RunFft.m \
    RunningMean.m \
    SetAreaToOne.m \
    StandardizeData.m \
    SweepLagCor.m \
    VarNan.m \
    WeightMean.m \
    myFact.m \
    redblue.m
