mattsdebbydir = $(prefix)/etc/matlab/ts_debby
dist_mattsdebby_SCRIPTS = \
    ExtractHorizWinds.m \
    ExtractSampleProfile.m \
    FigDust1NumXsectionConfig \
    FigDust2NumXsectionConfig \
    FigRainCoreProfileConfig \
    FigRainEnvProfileConfig \
    FigRainRbandProfileConfig \
    FigUpDraftCoreProfileConfig \
    FigUpDraftEnvProfileConfig \
    FigUpDraftRbandProfileConfig \
    FigAggrDepXsectionConfig \
    FigAggrSubXsectionConfig \
    FigBuoyXsectionConfig \
    FigCloudCondXsectionConfig \
    FigCloudDiamXsectionConfig \
    FigCloudEvapXsectionConfig \
    FigCloudNumXsectionConfig \
    FigCoolProfileConfig \
    FigCoolXsectionConfig \
    FigCpoolDistConfig \
    FigDnDraftCoreProfileConfig \
    FigDnDraftEnvProfileConfig \
    FigDnDraftRbandProfileConfig \
    FigDnXsectionConfig \
    FigDpPaperConfig \
    FigDust1CoreProfileConfig \
    FigDust1EnvProfileConfig \
    FigDust1NumCoreProfileConfig \
    FigDust1NumEnvProfileConfig \
    FigDust1NumRbandProfileConfig \
    FigDust1NumSampProfileConfig \
    FigDust1RbandProfileConfig \
    FigDust2CoreProfileConfig \
    FigDust2EnvProfileConfig \
    FigDust2NumCoreProfileConfig \
    FigDust2NumEnvProfileConfig \
    FigDust2NumRbandProfileConfig \
    FigDust2NumSampProfileConfig \
    FigDust2RbandProfileConfig \
    FigDustHydroProfileConfig \
    FigDustHydroXsectionConfig \
    FigDustProfileConfig \
    FigDustXsectionConfig \
    FigFsConfig \
    FigGraupDepXsectionConfig \
    FigGraupSubXsectionConfig \
    FigHailDepXsectionConfig \
    FigHailSubXsectionConfig \
    FigHeatProfileConfig \
    FigHeatXsectionConfig \
    FigHovmollerConfig \
    FigHydroProfileConfig \
    FigHydroXsectionConfig \
    FigLiqCondProfileConfig \
    FigLiqCondXsectionConfig \
    FigLiqEvapProfileConfig \
    FigLiqEvapXsectionConfig \
    FigMaxWindConfig \
    FigMidLevelRegenConfig \
    FigMphysProfileConfig \
    FigMphysXsectionConfig \
    FigPcprateConfig \
    FigPrisDepXsectionConfig \
    FigPrisSubXsectionConfig \
    FigRainCondXsectionConfig \
    FigRainDiamXsectionConfig \
    FigRainEvapXsectionConfig \
    FigRainNumXsectionConfig \
    FigRelhumXsectionConfig \
    FigSnowDepXsectionConfig \
    FigSnowSubXsectionConfig \
    FigSpeedtCoreProfileConfig \
    FigSpeedtEnvProfileConfig \
    FigSpeedtRbandProfileConfig \
    FigStrackCloudConfig \
    FigStrackD1NumConfig \
    FigStrackD2NumConfig \
    FigStrackDustAggrConfig \
    FigStrackDustCloudConfig \
    FigStrackDustGraupConfig \
    FigStrackDustHailConfig \
    FigStrackDustPrisConfig \
    FigStrackDustRainConfig \
    FigStrackDustSnowConfig \
    FigStrackRainConfig \
    FigStrackRelhumConfig \
    FigStrackSpeedtConfig \
    FigStrackThetaConfig \
    FigStrackThetaeConfig \
    FigStrackVaporConfig \
    FigTcondCoreProfileConfig \
    FigTcondRbandProfileConfig \
    FigTempcCoreProfileConfig \
    FigTempcEnvProfileConfig \
    FigTempcRbandProfileConfig \
    FigTempcXsectionConfig \
    FigThetaProfileConfig \
    FigThetaRhoProfileConfig \
    FigThetaRhoXsectionConfig \
    FigThetaXsectionConfig \
    FigThetaeProfileConfig \
    FigThetaeXsectionConfig \
    FigTseriesConfig \
    FigUpDraftProfileConfig \
    FigUpXsectionConfig \
    FigVaporCoreProfileConfig \
    FigVaporEnvProfileConfig \
    FigVaporRbandProfileConfig \
    FigVaporXsectionConfig \
    FigVintCondConfig \
    FigVrXsectionConfig \
    FigVtXsectionConfig \
    FigWindShearConfig \
    FigureConfig \
    FixSstFiles.m \
    GenAccumSfcDust.m \
    GenAzHistSumsCounts.m \
    GenBuoyancy.m \
    GenCintMeas.m \
    GenDustAdvection.m \
    GenFsAverages.m \
    GenFsFactorTseries.m \
    GenFsFactors.m \
    GenMoistDpFiles.m \
    GenMoistRamsInfo.m \
    GenMoistRamsInit.m \
    GenNonSalDpFiles.m \
    GenNonSalRamsInfo.m \
    GenNonSalRamsInit.m \
    GenPtrackAvgs.m \
    GenPtrackMomentum.m \
    GenReduceData.m \
    GenResidualMassMeas.m \
    GenSalLocs.m \
    GenStabilityMeas.m \
    GenStormDiffXsections.m \
    GenStormDustFields.m \
    GenStormHovmollers.m \
    GenStormMeas.m \
    GenStormProfiles.m \
    GenStormXsections.m \
    GenStrackProfiles.m \
    GenTempAnomalies.m \
    GenTotalMassMeas.m \
    GenTrackLine.m \
    GenTsavgHists.m \
    GenTsdHdaMeas.m \
    GenTsdHistMeas.m \
    GenTsdVintTseries.m \
    GenWindNoVortex.m \
    GenWindShearField.m \
    GenWindShearMeas.m \
    LocateSal.m \
    PlotAeroProfs.m \
    PlotDpCondPrecip.m \
    PlotDpFig7kmTropTseries.m \
    PlotDpFigDustHov.m \
    PlotDpFigDustMassRateTseries.m \
    PlotDpFigDustMassTseries.m \
    PlotDpFigDustMassTseries_ICCP.m \
    PlotDpFigDustMassTseries_ICCP_2.m \
    PlotDpFigDustRemoval.m \
    PlotDpFigDustSfcDep.m \
    PlotDpFigDustTransport.m \
    PlotDpFigGenRes.m \
    PlotDpFigHovmollers.m \
    PlotDpFigMapContour.m \
    PlotDpFigPrecipRate.m \
    PlotDpFigSfcTropTseries.m \
    PlotDpFigStormSeq.m \
    PlotDpFigTseries.m \
    PlotDustProfs.m \
    PlotFsFigAnalysisSetup.m \
    PlotFsFigBgraph.m \
    PlotFsFigBruntVaisalaXsection.m \
    PlotFsFigCfracProfiles.m \
    PlotFsFigCloudRainProfiles.m \
    PlotFsFigCondPtrackXsection.m \
    PlotFsFigCondStrackXsection.m \
    PlotFsFigDiagWmap.m \
    PlotFsFigDustProfiles.m \
    PlotFsFigDustPtrackXsection.m \
    PlotFsFigDustStrackXsection.m \
    PlotFsFigEvapThetaeXsection.m \
    PlotFsFigHwindVectors.m \
    PlotFsFigHydroThetaProfiles.m \
    PlotFsFigIke.m \
    PlotFsFigImageWmap.m \
    PlotFsFigIrSimStorm.m \
    PlotFsFigLine.m \
    PlotFsFigModelSetup.m \
    PlotFsFigMseXsection.m \
    PlotFsFigObsSimDust.m \
    PlotFsFigPcprate.m \
    PlotFsFigPcprateXsection.m \
    PlotFsFigRainXsection.m \
    PlotFsFigRelhumXsection.m \
    PlotFsFigSatSimStorm.m \
    PlotFsFigStormStats.m \
    PlotFsFigStormStruct.m \
    PlotFsFigStormVt.m \
    PlotFsFigTempPtrack.m \
    PlotFsFigTempWindByDustXsection.m \
    PlotFsFigTempWindXsection.m \
    PlotFsFigThetaXsection.m \
    PlotFsFigThetaeXsection.m \
    PlotFsFigTseries.m \
    PlotFsFigVaporXsection.m \
    PlotFsFigVectorWmap.m \
    PlotFsFigVisSimStorm.m \
    PlotFsFigVtFactors.m \
    PlotFsFigWind.m \
    PlotFsFigWindPtrack.m \
    PlotFsFigWindTseries.m \
    PlotFsFigWindVectors.m \
    PlotFsFigXsection.m \
    PlotGrids.m \
    PlotMaxWindAll.m \
    PlotMinPressAll.m \
    PlotSampleSoundings.m \
    PlotSampleSoundingsNearStorm.m \
    PlotStormStruct.m \
    PlotTracksAll.m \
    PlotWindVectors.m \
    ReadGridLoc.m \
    ReportDpMeas.m \
    ReportDpMidLevelMeas.m \
    ReportFsMeas.m \
    ReportIntMassNumbers.m \
    RunGenFigures.m \
    SetPath.m \
    TwoDimAnimation.m
