pynasawiscdir = $(prefix)/etc/python/nasa_wisc
dist_pynasawisc_SCRIPTS = \
    ConfigRce.py \
    ExtractRceLiteVars.py \
    GenAnimFrames.py \
    GenDomAverages.py \
    GenEqMeas.py \
    GenPowerSpectra.py \
    GenProfiles.py \
    GenRainDropEnergy.py \
    GenRamsDomAvgs.py \
    PlotPowerSpectra.py \
    PlotProfiles.py \
    PlotSkewT.py \
    PlotTimeSeries.py
